# qpay-py

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
qpay/: __init__.py  client.py  config.py  errors.py  types.py
tests/: conftest.py  test_async_client.py  test_client.py  test_config.py  test_errors.py
