[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qpay-py"
version = "1.0.0"
description = "QPay V2 API Python SDK"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "respx"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["qpay"]

[project.urls]
Homepage = "https://github.com/qpay-sdk/qpay-py"
